--- a/shop.html
+++ b/shop.html
@@ -539,9 +539,9 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">New Kitusuru, off Getathuru Rd, Nairobi</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+254 737 008 815</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@fourbic.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Farm Pick, Malumichampatti</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 88259 35176</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">hello@e-farmpick.in</span></a></li>
 	              </ul>
 	            </div>
             </div>
@@ -551,7 +551,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to fourbic can't be removed. Template is licensed under CC BY 3.0. -->
-						  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  by <a href="https://fourbic.com" target="_blank">fourbic</a>
+						  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  by <a href="https://fourbic.com" target="_blank">AjithKumar S</a>
 						  <!-- Link back to fourbic can't be removed. Template is licensed under CC BY 3.0. -->
 						</p>
           </div>
