--- a/shop.html
+++ b/shop.html
@@ -497,7 +497,7 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Qyenyeji</h2>
+              <h2 class="ftco-heading-2">🌿 Farm Pick</h2>
               <p>Eat clean and green. Eat Organic Food filled with the essence of Nature</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
