--- a/maintenance mode.html
+++ b/maintenance mode.html
@@ -48,7 +48,7 @@
     <h1>404</h1>
     <h2>Page Not Found</h2>
     <p>Sorry, the page you're looking for doesn't exist.</p>
-    <p><strong>Our site is currently under maintenance.</strong></p>
+    <p><strong>Our site is currently under maintenance and Contact Ajith - Admin.</strong></p>
     <p>Please check back later. Thank you for your patience!</p>
   </div>
 </body>
