--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   <script>
     setTimeout(() => {
-      window.location.href = "maintenance mode.html"; // Redirect after 5 seconds
+      window.location.href = "homepage.html"; // Redirect after 5 seconds
     }, 5000);
   </script>
 
