--- a/homepage.html
+++ b/homepage.html
@@ -460,7 +460,7 @@
 				<div class="row justify-content-end">
           <div class="col-md-6 heading-section ftco-animate deal-of-the-day ftco-animate">
           	<span class="subheading">Best Price For You</span>
-            <h2 class="mb-4">Deal of the day</h2>
+            <h2 class="mb-4">Deals of the day</h2>
             <p>Grab the deal and place the orders now..!</p>
             <h3><a href="#">Spinach</a></h3>
             <span class="price">₹23 <a href="#">now ₹14 only</a></span>
