--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Qyenyeji, Home of Organic Veges</title>
+    <title>🌿 Farm Pick, Home of Organic Veges</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -36,11 +36,11 @@
 		    		<div class="row d-flex">
 		    			<div class="col-md pr-4 d-flex topper align-items-center">
 					    	<div class="icon mr-2 d-flex justify-content-center align-items-center"><span class="icon-phone2"></span></div>
-						    <span class="text">+254 737 008 815</span>
+						    <span class="text">+91 88259 35176</span>
 					    </div>
 					    <div class="col-md pr-4 d-flex topper align-items-center">
 					    	<div class="icon mr-2 d-flex justify-content-center align-items-center"><span class="icon-paper-plane"></span></div>
-						    <span class="text">info@fourbic.com</span>
+						    <span class="text">hello@e-farmpick.in</span>
 					    </div>
 					    <div class="col-md-5 pr-4 d-flex topper align-items-center text-lg-right">
 						    <span class="text">Orders taken on Business days, All deliveries on Weekends</span>
@@ -52,7 +52,7 @@
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Qyenyeji</a>
+	      <a class="navbar-brand" href="index.html">🌿 Farm Pick</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -108,7 +108,7 @@
 		                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
 		                </div>
 		                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-		                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+		                <p>Far far away, behind the word mountains, far from the states India, there live the blind texts.</p>
 		                <p><a href="blog-single.html" class="btn btn-primary py-2 px-3">Read more</a></p>
 		              </div>
 		            </div>
@@ -124,7 +124,7 @@
 		                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
 		                </div>
 		                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-		                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+		                <p>Far far away, behind the word mountains, far from the ststes across India, there live the blind texts.</p>
 		                <p><a href="blog-single.html" class="btn btn-primary py-2 px-3">Read more</a></p>
 		              </div>
 		            </div>
@@ -140,7 +140,7 @@
 		                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
 		                </div>
 		                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-		                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+		                <p>Far far away, behind the word mountains, far from the states across india, there live the blind texts.</p>
 		                <p><a href="blog-single.html" class="btn btn-primary py-2 px-3">Read more</a></p>
 		              </div>
 		            </div>
