--- a/blog.html
+++ b/blog.html
@@ -156,7 +156,7 @@
 		                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
 		                </div>
 		                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-		                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+		                <p>Far far away, behind the word mountains, far from the states across india, there live the blind texts.</p>
 		                <p><a href="blog-single.html" class="btn btn-primary py-2 px-3">Read more</a></p>
 		              </div>
 		            </div>
@@ -172,7 +172,7 @@
 		                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
 		                </div>
 		                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-		                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+		                <p>Far far away, behind the word mountains, far from the states across India, there live the blind texts.</p>
 		                <p><a href="blog-single.html" class="btn btn-primary py-2 px-3">Read more</a></p>
 		              </div>
 		            </div>
@@ -188,7 +188,7 @@
 		                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
 		                </div>
 		                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-		                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+		                <p>Far far away, behind the word mountains, far from the states across India, there live the blind texts.</p>
 		                <p><a href="blog-single.html" class="btn btn-primary py-2 px-3">Read more</a></p>
 		              </div>
 		            </div>
@@ -221,7 +221,7 @@
                 <div class="text">
                   <h3 class="heading-1"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
                   <div class="meta">
-                    <div><a href="#"><span class="icon-calendar"></span> April 09, 2019</a></div>
+                    <div><a href="#"><span class="icon-calendar"></span> April 09, 2023</a></div>
                     <div><a href="#"><span class="icon-person"></span> Admin</a></div>
                     <div><a href="#"><span class="icon-chat"></span> 19</a></div>
                   </div>
@@ -232,7 +232,7 @@
                 <div class="text">
                   <h3 class="heading-1"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
                   <div class="meta">
-                    <div><a href="#"><span class="icon-calendar"></span> April 09, 2019</a></div>
+                    <div><a href="#"><span class="icon-calendar"></span> April 09, 2023</a></div>
                     <div><a href="#"><span class="icon-person"></span> Admin</a></div>
                     <div><a href="#"><span class="icon-chat"></span> 19</a></div>
                   </div>
@@ -243,7 +243,7 @@
                 <div class="text">
                   <h3 class="heading-1"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
                   <div class="meta">
-                    <div><a href="#"><span class="icon-calendar"></span> April 09, 2019</a></div>
+                    <div><a href="#"><span class="icon-calendar"></span> April 09, 2023</a></div>
                     <div><a href="#"><span class="icon-person"></span> Admin</a></div>
                     <div><a href="#"><span class="icon-chat"></span> 19</a></div>
                   </div>
@@ -267,7 +267,7 @@
 
             <div class="sidebar-box ftco-animate">
               <h3 class="heading">Paragraph</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus voluptate quod mollitia delectus aut, sunt placeat nam vero culpa sapiente consectetur similique, inventore eos fugit cupiditate numquam!</p>
+              <p>This is content</p>
             </div>
           </div>
 
@@ -287,7 +287,7 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Qyenyeji</h2>
+              <h2 class="ftco-heading-2">🌿 Farm Pick</h2>
               <p>Eat clean and green. Eat Organic Food filled with the essence of Nature</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
@@ -302,7 +302,7 @@
               <ul class="list-unstyled">
                 <li><a href="#" class="py-2 d-block">Shop</a></li>
                 <li><a href="#" class="py-2 d-block">About</a></li>
-                <li><a href="#" class="py-2 d-block">Journal</a></li>
+                <li><a href="#" class="py-2 d-block">Categories</a></li>
                 <li><a href="#" class="py-2 d-block">Contact Us</a></li>
               </ul>
             </div>
@@ -329,9 +329,9 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">New Kitusuru, off Getathuru Rd, Nairobi</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+254 737 008 815</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@fourbic.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Farm Pick, Malumichampatti</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 88259 35176</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">hello@e-farmpick.in</span></a></li>
 	              </ul>
 	            </div>
             </div>
@@ -341,7 +341,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to fourbic can't be removed. Template is licensed under CC BY 3.0. -->
-						  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  by <a href="https://fourbic.com" target="_blank">fourbic</a>
+						  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  by <a href="https://fourbic.com" target="_blank">AjithKumar S</a>
 						  <!-- Link back to fourbic can't be removed. Template is licensed under CC BY 3.0. -->
 						</p>
           </div>
