--- a/homepage.html
+++ b/homepage.html
@@ -203,7 +203,7 @@
 						</div>
 						<div class="category-wrap ftco-animate img d-flex align-items-end" style="background-image: url(images/category-4.jpg);">
 							<div class="text px-3 py-1">
-								<h2 class="mb-0"><a href="#">Organic</a></h2>
+								<h2 class="mb-0"><a href="#">Nuts</a></h2>
 							</div>
 						</div>
 					</div>
