--- a/homepage.html
+++ b/homepage.html
@@ -649,7 +649,68 @@
         </div>
       </div>
     </footer>
+	  <script>
+        // Auto-scroll for the customer reviews section
+        const reviewContainer = document.querySelector('.review-container');
+        let scrollInterval;
 
+        function startAutoScroll() {
+            scrollInterval = setInterval(() => {
+                const scrollAmount = 320 + 25; // Card width + gap
+                reviewContainer.scrollLeft += scrollAmount;
+                if (reviewContainer.scrollLeft + reviewContainer.clientWidth >= reviewContainer.scrollWidth - 10) {
+                    reviewContainer.scrollLeft = 0;
+                }
+            }, 3000);
+        }
+
+        function stopAutoScroll() {
+            clearInterval(scrollInterval);
+        }
+
+        // Start auto-scroll when the page loads
+        document.addEventListener('DOMContentLoaded', startAutoScroll);
+
+        // Optional: Pause scroll on hover
+        reviewContainer.addEventListener('mouseenter', stopAutoScroll);
+        reviewContainer.addEventListener('mouseleave', startAutoScroll);
+
+        // JavaScript for Location Selection Pop-up
+        const locationPopupOverlay = document.getElementById('locationPopupOverlay');
+        const citySelect = document.getElementById('city-select');
+        const setLocationBtn = document.getElementById('set-location-btn');
+
+        // Function to show the pop-up
+        function showLocationPopup() {
+            locationPopupOverlay.classList.add('active');
+            document.body.style.overflow = 'hidden'; // Prevent scrolling background
+        }
+
+        // Function to hide the pop-up
+        function hideLocationPopup() {
+            locationPopupOverlay.classList.remove('active');
+            document.body.style.overflow = ''; // Restore scrolling
+        }
+
+        // Show pop-up every time the page loads
+        document.addEventListener('DOMContentLoaded', showLocationPopup);
+
+        // Event listener for setting the location
+        setLocationBtn.addEventListener('click', () => {
+            const selectedCity = citySelect.value;
+            if (selectedCity) {
+                // Store the selected city in localStorage (optional, but good for other logic)
+                localStorage.setItem('farmpick_selected_city', selectedCity);
+                alert(`You have selected ${selectedCity.charAt(0).toUpperCase() + selectedCity.slice(1)}. Enjoy your shopping!`);
+                hideLocationPopup(); // Hide the pop-up
+                // In a real application, you would now:
+                // 1. Load products specific to this city.
+                // 2. Update UI elements to show the selected city.
+            } else {
+                alert("Please select a city to proceed.");
+            }
+        });
+    </script>
 
 
   <!-- loader -->
