--- a/Homepage.html
+++ b/Homepage.html
@@ -669,7 +669,7 @@
     <footer>
         <div class="footer-container">
             <div class="footer-logo">
-                <a href="#"><span>e</span>Fresh</a>
+                <a href="#"><span>🌿 Farm</span>Pick</a>
                 <div class="footer-social">
                     <a href="#">
                         <i class="fa-brands fa-facebook" style="color: #3a87fe;"></i>
