--- a/Homepage.html
+++ b/Homepage.html
@@ -304,7 +304,7 @@
         </label>
         <ul class="menu">
             <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="#category">Shop</a></li>
+            <li><a href="/Fruits Category Page HTML.html">Shop</a></li>
             <li><a href="/about us.html">About</a></li>
             <li><a href="/contact us.html">Contact US</a></li>
         </ul>
