--- a/about us.html
+++ b/about us.html
@@ -315,9 +315,9 @@
   </label>
   <ul class="menu">
     <li><a href="index.html" class="active">Home</a></li>
-    <li><a href="#category">Categories</a></li>
+    <li><a href="/Fruits Category Page HTML.html">Categories</a></li>
     <li><a href="/about us.html">About</a></li>
-    <li><a href="#download-app">Contact Us</a></li>
+    <li><a href="/contact us.html">Contact Us</a></li>
   </ul>
   <div class="right-nav">
     <a href="#" class="like"><i class="far fa-heart"></i><span>0</span></a>
