--- a/contact us.html
+++ b/contact us.html
@@ -60,26 +60,26 @@
                 <table>
                     <tr>
                         <td>Email: </td>
-                        <td>contact@msijanakpuri.com</td>
+                        <td>hello@e-farmpick.in</td>
                     </tr>
 
                     <tr>
                         <td>Phone: </td>
-                        <td>+91 011-45656183</td>
+                        <td>+(91) 88259 35176</td>
                     </tr>
 
                     <tr>
                         <td>Address: </td>
-                        <td>Maharaja Surajmail Institute <br>
-                            C-4, Janakpuri, <br>
-                            Delhi - 110058, India</td>
+                        <td>Farm Pick<br>
+                            Malumichampatti, <br>
+                            Coimbatore - 641035, India</td>
                     </tr>
                 </table>
                 
                 <!-- Map section -->
                 <div class="map">
                     <!-- Google Map iframe -->
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3502.2888210618585!2d77.09131724016883!3d28.621104670527558!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d04afb8dbcfe1%3A0xaff19e718be2136b!2sMaharaja%20Surajmal%20Institute%20Of%20Technology!5e0!3m2!1sen!2sin!4v1711214006526!5m2!1sen!2sin" width="800" height="275" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.740455999388!2d76.99666327588958!3d10.757978459630616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba8575e0aabf6b9%3A0x5cf01ec1a6c6e648!2sFarm%20Pick!5e0!3m2!1sen!2sin!4v1718354965943!5m2!1sen!2sin"></iframe>
                 </div>
             </div>
         </div>
