--- a/contact us.html
+++ b/contact us.html
@@ -79,7 +79,8 @@
                 <!-- Map section -->
                 <div class="map">
                     <!-- Google Map iframe -->
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.740455999388!2d76.99666327588958!3d10.757978459630616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba8575e0aabf6b9%3A0x5cf01ec1a6c6e648!2sFarm%20Pick!5e0!3m2!1sen!2sin!4v1718354965943!5m2!1sen!2sin"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.113843471618!2d76.9970381!3d10.9038859!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba8594abebaab39%3A0x147b82ec91960583!2sFARM%20PICK!5e0!3m2!1sen!2sin!4v1718355400000!5m2!1sen!2sin
+"></iframe>
                 </div>
             </div>
         </div>
