--- a/contact us.html
+++ b/contact us.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Title -->
-    <title>Contact Form @sauravxcode</title>
+    <title>Contact Form - Farm Pick</title>
     <!-- Link to CSS file -->
     <link rel="stylesheet" href="css/style2.css">
 </head>
