--- a/Homepage.html
+++ b/Homepage.html
@@ -307,13 +307,14 @@
             <li><a href="/Fruits Category Page HTML.html">Shop</a></li>
             <li><a href="/about us.html">About</a></li>
             <li><a href="/contact us.html">Contact US</a></li>
+            <li><a href="/Login And Registration HTML.html">Login / Signup</a></li>
         </ul>
         <div class="right-nav">
-            <a href="#" class="like">
+            <a href="/Wishlist HTML.html" class="like">
                 <i class="far fa-heart"></i>
                 <span>0</span>
             </a>
-            <a href="#" class="cart">
+            <a href="/Shopping Cart HTML.html" class="cart">
                 <i class="fa fa-shopping-cart"></i>
                 <span>0</span>
             </a>
