--- a/Login And Registration HTML.html
+++ b/Login And Registration HTML.html
@@ -86,7 +86,7 @@
 
                         <button type="submit" class = 'sign_in_btn'>
 
-                            <a href = 'Home Page HTML.html' style = 'color: white;'>
+                            <a href = 'Homepage.html' style = 'color: white;'>
                             
                                 SIGN IN
 
