--- a/Homepage.html
+++ b/Homepage.html
@@ -23,7 +23,7 @@
         #customer-reviews {
             padding: 40px 20px;
             text-align: center;
-            background-color: #f9f9f9;
+            background-color: #edffeb;
         }
 
         #customer-reviews h2 {
@@ -106,7 +106,7 @@
         #price-comparison {
             padding: 40px 20px;
             text-align: center;
-            background-color: #fff;
+            background-color: #edffeb;
         }
 
         #price-comparison h2 {
