--- a/Homepage.html
+++ b/Homepage.html
@@ -382,7 +382,7 @@
             </div>
             <div class="service-box">
                 <strong>6Hr Shipping*</strong>
-                <span>Delivering across Mumbai & Pune</span>
+                <span>Delivering across Coimbatore & Chennai</span>
             </div>
             <div class="service-box">
                 <strong>Easy Returns</strong>
