--- a/Homepage.html
+++ b/Homepage.html
@@ -279,7 +279,7 @@
 <body>
     <div class="popup-overlay" id="locationPopupOverlay">
         <div class="location-popup" id="locationPopup">
-            <h2 class="section-heading">Welcome to 🌿 Farm Pick!</h2>
+            <h2 class="section-heading">Welcome to Farm Pick</h2>
             <p>Please select your city to see products available for your location and enjoy fresh farm produce delivered to your doorstep.</p>
             <div class="location-form">
                 <label for="city-select" class="sr-only">Select your city</label>
