--- a/about us.html
+++ b/about us.html
@@ -308,7 +308,7 @@
 
 <!-- Navigation Panel -->
 <nav class="navigation">
-  <a href="index.html" class="logo"><span>Farm</span>Pick</a>
+  <a href="index.html" class="logo"><span>🌿 Farm</span>Pick</a>
   <input type="checkbox" class="menu-btn" id="menu-btn">
   <label for="menu-btn" class="menu-icon">
     <span class="nav-icon"></span>
@@ -333,7 +333,7 @@
 <section>
   <h2>Who We Are</h2>
   <p>
-    At <strong>eFarmpick</strong>, we are on a mission to revolutionize the way fresh produce reaches your home. 
+    At <strong>Farmpick</strong>, we are on a mission to revolutionize the way fresh produce reaches your home. 
     We connect farmers directly with consumers, ensuring that every household gets farm-fresh, high-quality products while farmers receive a fair price for their hard work.
   </p>
 
