--- a/Homepage.html
+++ b/Homepage.html
@@ -157,7 +157,7 @@
 
         /* General heading style (if not already defined in style.css) */
         .section-heading {
-            font-size: 1.5em;
+            font-size: 2.2em;
             color: #333;
             text-align: center;
             margin-bottom: 40px;
@@ -171,7 +171,7 @@
             background-color: #0dd134;
             display: block;
             margin: 10px auto 0;
-            border-radius: 2px;
+            border-radius: 1px;
         }
 
         /* Styles for the Location Pop-up Modal */
@@ -213,7 +213,7 @@
         }
 
         .location-popup h2 {
-            font-size: 2.2em;
+            font-size: 1.8em;
             margin-bottom: 15px;
             color: #0dd134; /* Green accent */
         }
@@ -279,7 +279,7 @@
 <body>
     <div class="popup-overlay" id="locationPopupOverlay">
         <div class="location-popup" id="locationPopup">
-            <h2 class="section-heading">Welcome to Farm Pick</h2>
+            <h2 class="section-heading">Welcome to Farm Pick !</h2>
             <p>Please select your city to see products available for your location and enjoy fresh farm produce delivered to your doorstep.</p>
             <div class="location-form">
                 <label for="city-select" class="sr-only">Select your city</label>
