--- a/Homepage.html
+++ b/Homepage.html
@@ -318,6 +318,10 @@
                 <i class="fa fa-shopping-cart"></i>
                 <span>0</span>
             </a>
+            <a href="/Login And Registration HTML.html" class="cart">
+                <i class="fa fa-user"></i>
+                <span>0</span>
+            </a>
         </div>
     </nav>
     <section id="search-banner">
