--- a/Homepage.html
+++ b/Homepage.html
@@ -377,11 +377,11 @@
     <section id="services-banner">
         <div class="service-container">
             <div class="service-box">
-                <strong>Free Delivery*</strong>
+                <strong>Free Delivery</strong>
                 <span>On all orders above ₹1000</span>
             </div>
             <div class="service-box">
-                <strong>6Hr Shipping*</strong>
+                <strong>6Hr Shipping</strong>
                 <span>Delivering across Coimbatore & Chennai</span>
             </div>
             <div class="service-box">
