--- a/Homepage.html
+++ b/Homepage.html
@@ -412,7 +412,7 @@
                 <strong>Onion</strong>
                 <span class="quantity">1 KG</span>
                 <span class="price">₹22</span>
-                <a href="#" class="cart-btn">
+                <a href="Shopping Cart HTML.html" class="cart-btn">
                     <i class="fas fa-shopping-bag"></i> Add to Cart
                 </a>
                 <a href="#" class="like-btn">
@@ -424,7 +424,7 @@
                 <strong>Tomato</strong>
                 <span class="quantity">1 KG</span>
                 <span class="price">₹17</span>
-                <a href="#" class="cart-btn">
+                <a href="Shopping Cart HTML.html" class="cart-btn">
                     <i class="fas fa-shopping-bag"></i> Add to Cart
                 </a>
                 <a href="#" class="like-btn">
@@ -436,7 +436,7 @@
                 <strong>Cauliflower</strong>
                 <span class="quantity">1 KG</span>
                 <span class="price">₹28</span>
-                <a href="#" class="cart-btn">
+                <a href="Shopping Cart HTML.html" class="cart-btn">
                     <i class="fas fa-shopping-bag"></i> Add to Cart
                 </a>
                 <a href="#" class="like-btn">
@@ -448,7 +448,7 @@
                 <strong>Green Chilli</strong>
                 <span class="quantity">1 KG</span>
                 <span class="price">₹40</span>
-                <a href="#" class="cart-btn">
+                <a href="Shopping Cart HTML.html" class="cart-btn">
                     <i class="fas fa-shopping-bag"></i> Add to Cart
                 </a>
                 <a href="#" class="like-btn">
@@ -460,7 +460,7 @@
                 <strong>Potato</strong>
                 <span class="quantity">1 KG</span>
                 <span class="price">₹30</span>
-                <a href="#" class="cart-btn">
+                <a href="Shopping Cart HTML.html" class="cart-btn">
                     <i class="fas fa-shopping-bag"></i> Add to Cart
                 </a>
                 <a href="#" class="like-btn">
@@ -472,7 +472,7 @@
                 <strong>Lemon</strong>
                 <span class="quantity">500 G</span>
                 <span class="price">₹26</span>
-                <a href="#" class="cart-btn">
+                <a href="Shopping Cart HTML.html" class="cart-btn">
                     <i class="fas fa-shopping-bag"></i> Add to Cart
                 </a>
                 <a href="#" class="like-btn">
@@ -484,7 +484,7 @@
                 <strong>Carrot</strong>
                 <span class="quantity">1 KG</span>
                 <span class="price">₹35</span>
-                <a href="#" class="cart-btn">
+                <a href="Shopping Cart HTML.html" class="cart-btn">
                     <i class="fas fa-shopping-bag"></i> Add to Cart
                 </a>
                 <a href="#" class="like-btn">
@@ -496,7 +496,7 @@
                 <strong>Radish</strong>
                 <span class="quantity">1 KG</span>
                 <span class="price">₹28</span>
-                <a href="#" class="cart-btn">
+                <a href="Shopping Cart HTML.html" class="cart-btn">
                     <i class="fas fa-shopping-bag"></i> Add to Cart
                 </a>
                 <a href="#" class="like-btn">
@@ -508,7 +508,7 @@
                 <strong>Brinjal</strong>
                 <span class="quantity">1 KG</span>
                 <span class="price">₹37</span>
-                <a href="#" class="cart-btn">
+                <a href="Shopping Cart HTML.html" class="cart-btn">
                     <i class="fas fa-shopping-bag"></i> Add to Cart
                 </a>
                 <a href="#" class="like-btn">
@@ -527,7 +527,7 @@
                 <strong>Huge Pack</strong>
                 <span class="quantity">Apple, Tomato, Potato, +4</span>
                 <span class="price">₹600</span>
-                <a href="#" class="cart-btn">
+                <a href="Shopping Cart HTML.html" class="cart-btn">
                     <i class="fas fa-shopping-bag"></i> Add to Cart
                 </a>
                 <a href="#" class="like-btn">
@@ -539,7 +539,7 @@
                 <strong>Large Pack</strong>
                 <span class="quantity">Potato, Carrot, +3</span>
                 <span class="price">₹350</span>
-                <a href="#" class="cart-btn">
+                <a href="Shopping Cart HTML.html" class="cart-btn">
                     <i class="fas fa-shopping-bag"></i> Add to Cart
                 </a>
                 <a href="#" class="like-btn">
@@ -551,7 +551,7 @@
                 <strong>Small Pack</strong>
                 <span class="quantity">Orange, Potato, +2</span>
                 <span class="price">₹220</span>
-                <a href="#" class="cart-btn">
+                <a href="Shopping Cart HTML.html" class="cart-btn">
                     <i class="fas fa-shopping-bag"></i> Add to Cart
                 </a>
                 <a href="#" class="like-btn">
