--- a/Homepage.html
+++ b/Homepage.html
@@ -684,16 +684,16 @@
                 <strong>Product</strong>
                 <ul>
                     <li>
-                        <a href="#">Clothes</a>
+                        <a href="#">Vegetables</a>
                     </li>
                     <li>
-                        <a href="#">Packages</a>
+                        <a href="#">Fruits</a>
                     </li>
                     <li>
-                        <a href="#">Popular</a>
+                        <a href="#">Groceries</a>
                     </li>
                     <li>
-                        <a href="#">New</a>
+                        <a href="#">New arrivals</a>
                     </li>
                 </ul>
             </div>
