--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
   <script>
     setTimeout(() => {
-      window.location.href = "mm.html"; // Redirect after 5 seconds
+      window.location.href = "Homepage.html"; // Redirect after 5 seconds
     }, 5000);
   </script>
 
