--- a/Homepage.html
+++ b/Homepage.html
@@ -371,8 +371,6 @@
             </a>
         </div>
     </section>
-    <section id="category">
-    </section>
 
     <section id="services-banner">
         <div class="service-container">
@@ -397,8 +395,6 @@
                 <span>Between 7am to 10pm, Monday to Saturday</span>
             </div>
         </div>
-    </section>
-    <section id="popular-product">
     </section>
 
     <section id="popular-product">
@@ -563,49 +559,49 @@
 
         <section id="price-comparison">
         <h2>Our Price vs. Market Price</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Product</th>
-                    <th>Market Price (₹/KG)</th>
-                    <th>Our Price (₹/KG)</th>
-                    <th>Savings (₹/KG)</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Onion</td>
-                    <td>25</td>
-                    <td>22</td>
-                    <td><i class="fas fa-rupee-sign"></i> 3</td>
-                </tr>
-                <tr>
-                    <td>Tomato</td>
-                    <td>20</td>
-                    <td>17</td>
-                    <td><i class="fas fa-rupee-sign"></i> 3</td>
-                </tr>
-                <tr>
-                    <td>Potato</td>
-                    <td>35</td>
-                    <td>30</td>
-                    <td><i class="fas fa-rupee-sign"></i> 5</td>
-                </tr>
-                <tr>
-                    <td>Carrot</td>
-                    <td>40</td>
-                    <td>35</td>
-                    <td><i class="fas fa-rupee-sign"></i> 5</td>
-                </tr>
-                <tr>
-                    <td>Lemon (500g)</td>
-                    <td>30</td>
-                    <td>26</td>
-                    <td><i class="fas fa-rupee-sign"></i> 4</td>
-                </tr>
-            </tbody>
-        </table>
-    </section>
+        <div class="table-responsive"> <table>
+                <thead>
+                    <tr>
+                        <th>Product</th>
+                        <th>Market Price (₹/KG)</th>
+                        <th>Our Price (₹/KG)</th>
+                        <th>Savings (₹/KG)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Onion</td>
+                        <td>25</td>
+                        <td>22</td>
+                        <td><i class="fas fa-rupee-sign"></i> 3</td>
+                    </tr>
+                    <tr>
+                        <td>Tomato</td>
+                        <td>20</td>
+                        <td>17</td>
+                        <td><i class="fas fa-rupee-sign"></i> 3</td>
+                    </tr>
+                    <tr>
+                        <td>Potato</td>
+                        <td>35</td>
+                        <td>30</td>
+                        <td><i class="fas fa-rupee-sign"></i> 5</td>
+                    </tr>
+                    <tr>
+                        <td>Carrot</td>
+                        <td>40</td>
+                        <td>35</td>
+                        <td><i class="fas fa-rupee-sign"></i> 5</td>
+                    </tr>
+                    <tr>
+                        <td>Lemon (500g)</td>
+                        <td>30</td>
+                        <td>26</td>
+                        <td><i class="fas fa-rupee-sign"></i> 4</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div> </section>
 
     <section id="customer-reviews">
         <h2>Voices of Trust</h2>
@@ -613,7 +609,7 @@
             <div class="review-card">
                 <img src="images/Avvaiyar-.png" alt="Customer 1">
                 <strong>Auvaiyar</strong>
-                <p>"Food itself gives the body health". Avvaiyar's wisdom in her poems often emphasies the importance of food and its role in sustaining life and health,
+                <p>"Food itself gives the body health". Avvaiyar's wisdom in her poems often emphasises the importance of food and its role in sustaining life and health,
 						which could easily include vegetables.</p>
             </div>
             <div class="review-card">
