--- a/Homepage.html
+++ b/Homepage.html
@@ -326,7 +326,7 @@
 
         <div class="search-banner-text">
             <h1>Order from our Farm for the day</h1>
-            <strong>#Faster Delivery</strong>
+            <strong># Fresh Vegetables</strong>
             <form class="search-box" action="">
                 <i class="fas fa-search"></i>
                 <input type="text" class="search-input" placeholder="Search your daily grocery" name="search" required>
