--- a/Homepage.html
+++ b/Homepage.html
@@ -658,10 +658,10 @@
                 <b>We have everything from fresh fruits and vegetables to frozen foods. Shopping made easy. Buy Groceries now.</b>
             </p>
             <div class="download-btns">
-                <a href="#">
+                <a href="mm.html">
                     <img src="images/appstore-btn.png" alt="">
                 </a>
-                <a href="#">
+                <a href="/mm.html">
                     <img src="images/googleplay-btn.png" alt="">
                 </a>
             </div>
