--- a/Homepage.html
+++ b/Homepage.html
@@ -670,7 +670,7 @@
     <footer>
         <div class="footer-container">
             <div class="footer-logo">
-                <a href="#"><span>🌿 Farm</span>Pick</a>
+                <a href="/index.html"><span>🌿 Farm</span>Pick</a>
                 <div class="footer-social">
                     <a href="#">
                         <i class="fa-brands fa-facebook" style="color: #3a87fe;"></i>
