--- a/Homepage.html
+++ b/Homepage.html
@@ -306,7 +306,7 @@
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="/Fruits Category Page HTML.html">Shop</a></li>
             <li><a href="/about us.html">About</a></li>
-            <li><a href="/contact us.html">Contact US</a></li>
+            <li><a href="/contact us.html">Contact us</a></li>
             <li><a href="/Login And Registration HTML.html">Login / Signup</a></li>
         </ul>
         <div class="right-nav">
@@ -329,7 +329,7 @@
             <strong># Fresh Vegetables</strong>
             <form class="search-box" action="">
                 <i class="fas fa-search"></i>
-                <input type="text" class="search-input" placeholder="Search your daily grocery" name="search" required>
+                <input type="text" class="search-input" placeholder="Search your daily veggies" name="search" required>
                 <input type="submit" class="btn" value="Search">
             </form>
         </div>
