--- a/Homepage.html
+++ b/Homepage.html
@@ -296,7 +296,7 @@
     </div>
     <nav class="navigation">
         <a href="index.html" class="logo">
-            <span>🌿 Farm</span>Pick
+            <img src="images/FarmPick Logo.png" alt="Farmpick Logo" style="height: 30px; vertical-align: middle;" />
         </a>
         <input type="checkbox" class="menu-btn" id="menu-btn">
         <label for="menu-btn" class="menu-icon">
