--- a/index.html
+++ b/index.html
@@ -100,14 +100,17 @@
 <body>
 
   <div class="loader-container" id="loader">
-    <div class="logo">🌿 Farmpick</div>
+    <div class="logo">
+      <img src="/images/FarmPick Logo.png" alt="Farmpick Logo" class="logo-img" />
+    </div>
     <div class="spinner"></div>
   </div>
+  
 
   <script>
     // Redirect to Homepage.html after 5 seconds (5000 milliseconds)
     setTimeout(() => {
-      window.location.href = "Homepage.html";
+      window.location.href = "mm.html";
     }, 5000);
   </script>
 
