--- a/B2C/about us.html
+++ b/B2C/about us.html
@@ -315,9 +315,9 @@
   </label>
   <ul class="menu">
     <li><a href="index.html" class="active">Home</a></li>
-    <li><a href="/Fruits Category Page HTML.html">Categories</a></li>
-    <li><a href="/about us.html">About</a></li>
-    <li><a href="/contact us.html">Contact Us</a></li>
+    <li><a href="/B2C/Fruits Category Page HTML.html">Categories</a></li>
+    <li><a href="/B2C/about us.html">About</a></li>
+    <li><a href="/B2C/contact us.html">Contact Us</a></li>
   </ul>
   <div class="right-nav">
     <a href="#" class="like"><i class="far fa-heart"></i><span>0</span></a>
