--- a/B2C/contact us.html
+++ b/B2C/contact us.html
@@ -7,7 +7,7 @@
     <!-- Title -->
     <title>Contact Form - Farm Pick</title>
     <!-- Link to CSS file -->
-    <link rel="stylesheet" href="css/style2.css">
+    <link rel="stylesheet" href="/B2C/css/style2.css">
 </head>
 <body>
     <!-- Main container -->
@@ -86,6 +86,6 @@
         </div>
     </div>
     <!-- JavaScript file -->
-    <script src="assets/js/script.js"></script>
+    <script src="/B2C/js/script.js"></script>
 </body>
 </html>
