--- a/B2C/Homepage.html
+++ b/B2C/Homepage.html
@@ -304,17 +304,17 @@
         </label>
         <ul class="menu">
             <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="/Fruits Category Page HTML.html">Shop</a></li>
-            <li><a href="/about us.html">About</a></li>
-            <li><a href="/contact us.html">Contact us</a></li>
-            <li><a href="/Login And Registration HTML.html">Login / Signup</a></li>
+            <li><a href="/B2C/Fruits Category Page HTML.html">Shop</a></li>
+            <li><a href="/B2C/about us.html">About</a></li>
+            <li><a href="/B2C/contact us.html">Contact us</a></li>
+            <li><a href="/B2C/Login And Registration HTML.html">Login / Signup</a></li>
         </ul>
         <div class="right-nav">
-            <a href="/Wishlist HTML.html" class="like">
+            <a href="/B2C/Wishlist HTML.html" class="like">
                 <i class="far fa-heart"></i>
                 <span>0</span>
             </a>
-            <a href="/Shopping Cart HTML.html" class="cart">
+            <a href="/B2C/Shopping Cart HTML.html" class="cart">
                 <i class="fa fa-shopping-cart"></i>
                 <span>0</span>
             </a>
