--- a/B2C/about us.html
+++ b/B2C/about us.html
@@ -377,13 +377,13 @@
     <h2>Meet Our Team</h2>
     <div class="team-members">
       <div class="member-card">
-        <img src="/images/Rahul.png" alt="Rahul">
+        <img src="/B2C/images/Rahul.png" alt="Rahul">
         <h3>Rahul</h3>
         <p><strong>Founder & Operations Head</strong></p>
         <p>Rahul brings years of agricultural supply chain experience and leads the farm-to-shelf logistics with unmatched efficiency.</p>
       </div>
       <div class="member-card">
-        <img src="/images/Dharani.png" alt="Dharani">
+        <img src="/B2C/images/Dharani.png" alt="Dharani">
         <h3>Dharani</h3>
         <p><strong>Founder & Marketing Lead</strong></p>
         <p>Dharani drives our B2B and B2C marketing strategy, ensuring Farmpick stays connected with both businesses and households.</p>
