--- a/B2C/Fruits Category Page HTML.html
+++ b/B2C/Fruits Category Page HTML.html
@@ -10,7 +10,7 @@
 
     <script src="https://kit.fontawesome.com/5471644867.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" type="text/css" href="\css/Fruits Category Page CSS.css">
+    <link rel="stylesheet" type="text/css" href="/B2C/css/Fruits Category Page CSS.css">
     
     <link rel="shortcut icon" type="image/jpg" href="C:\Users\hp\Desktop\College\First Semester\Introduction To Web Technologies\Notepad ++ Files\Project\favicon.ico"/>
 
@@ -25,12 +25,12 @@
             <div class="product-container">
                 <!--box---------->
                 <div class="product-box">
-                    <img alt="apple" src="/images/apple.jpg">
+                    <img alt="apple" src="/B2C/images/apple.jpg">
                     <strong>Apple</strong>
                     <span class="quantity">1 KG</span>
                     <span class="price">Rs. 100</span>
                     <!--cart-btn------->
-                    <a href="Shopping Cart HTML.html" class="cart-btn" style = 'text-decoration: none;'>
+                    <a href="/B2C/Shopping Cart HTML.html" class="cart-btn" style = 'text-decoration: none;'>
                         <i class="fas fa-shopping-bag"></i> Add to Cart
                     </a>
                     <!--like-btn------->
@@ -40,12 +40,12 @@
                 </div>
                 <!--box---------->
                 <div class="product-box">
-                    <img alt="chili" src="/images/gchilli.jpg">
+                    <img alt="chili" src="/B2C/images/gchilli.jpg">
                     <strong>Chili</strong>
                     <span class="quantity">1 KG</span>
                     <span class="price">Rs. 80</span>
                     <!--cart-btn------->
-                    <a href="Shopping Cart HTML.html" class="cart-btn" style = 'text-decoration: none;'>
+                    <a href="/B2C/Shopping Cart HTML.html" class="cart-btn" style = 'text-decoration: none;'>
                         <i class="fas fa-shopping-bag"></i> Add to Cart
                     </a>
                     <!--like-btn------->
@@ -55,12 +55,12 @@
                 </div>
                 <!--box---------->
                 <div class="product-box">
-                    <img alt="apple" src="/images/onion.jpg">
+                    <img alt="apple" src="/B2C/images/onion.jpg">
                     <strong>Onion</strong>
                     <span class="quantity">1 KG</span>
                     <span class="price">Rs. 50</span>
                     <!--cart-btn------->
-                    <a href="Shopping Cart HTML.html" class="cart-btn" style = 'text-decoration: none;'>
+                    <a href="/B2C/Shopping Cart HTML.html" class="cart-btn" style = 'text-decoration: none;'>
                         <i class="fas fa-shopping-bag"></i> Add to Cart
                     </a>
                     <!--like-btn------->
@@ -70,12 +70,12 @@
                 </div>
                 <!--box---------->
                 <div class="product-box">
-                    <img alt="apple" src="/images/potato.jpg">
+                    <img alt="apple" src="/B2C/images/potato.jpg">
                     <strong>Potato</strong>
                     <span class="quantity">1 KG</span>
                     <span class="price">Rs. 60</span>
                     <!--cart-btn------->
-                    <a href="Shopping Cart HTML.html" class="cart-btn" style = 'text-decoration: none;'>
+                    <a href="/B2C/Shopping Cart HTML.html" class="cart-btn" style = 'text-decoration: none;'>
                         <i class="fas fa-shopping-bag"></i> Add to Cart
                     </a>
                     <!--like-btn------->
@@ -85,12 +85,12 @@
                 </div>
                 <!--box---------->
                 <div class="product-box">
-                    <img alt="oranges" src="/images/orange.jpg">
+                    <img alt="oranges" src="/B2C/images/orange.jpg">
                     <strong>Oranges</strong>
                     <span class="quantity">1 KG</span>
                     <span class="price">Rs. 80</span>
                     <!--cart-btn------->
-                    <a href="Shopping Cart HTML.html" class="cart-btn" style = 'text-decoration: none;'>
+                    <a href="/B2C/Shopping Cart HTML.html" class="cart-btn" style = 'text-decoration: none;'>
                         <i class="fas fa-shopping-bag"></i> Add to Cart
                     </a>
                     <!--like-btn------->
@@ -100,12 +100,12 @@
                 </div>
                 <!--box---------->
                 <div class="product-box">
-                    <img alt="apple" src="/images/Tomato11.jpg">
+                    <img alt="apple" src="/B2C/images/Tomato11.jpg">
                     <strong>Tomato</strong>
                     <span class="quantity">1 KG</span>
                     <span class="price">Rs. 80</span>
                     <!--cart-btn------->
-                    <a href="Shopping Cart HTML.html" class="cart-btn" style = 'text-decoration: none;'>
+                    <a href="/B2C/Shopping Cart HTML.html" class="cart-btn" style = 'text-decoration: none;'>
                         <i class="fas fa-shopping-bag"></i> Add to Cart
                     </a>
                     <!--like-btn------->
