--- a/B2C/Homepage.html
+++ b/B2C/Homepage.html
@@ -307,7 +307,7 @@
             <li><a href="/B2C/Fruits Category Page HTML.html">Shop</a></li>
             <li><a href="/B2C/about us.html">About</a></li>
             <li><a href="/B2C/contact us.html">Contact us</a></li>
-            <li><a href="/B2C/Login And Registration HTML.html">Login / Signup</a></li>
+            <!-- <li><a href="/B2C/Login And Registration HTML.html">Login / Signup</a></li> -->
         </ul>
         <div class="right-nav">
             <a href="/B2C/Wishlist HTML.html" class="like">
