--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <select id="userType">
         <option value="" disabled selected>Select</option>
         <option value="B2BB\mm.html">B2B</option>
-        <option value="B2C\Login And Registration HTML.html">B2C</option>
+        <option value="mm.html">B2C</option>
         <option value="Admin\Login And Registration HTML.html">Admin</option>
       </select>
       <button onclick="goToPage()">Go</button>
