--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <h2>Select Website</h2>
       <select id="userType">
         <option value="" disabled selected>Select</option>
-        <option value="B2BB\mm.html">B2B</option>
+        <option value="B2BB\home.html">B2B</option>
         <option value="B2C\Login And Registration HTML.html">B2C</option>
         <option value="Admin\Login And Registration HTML.html">Admin</option>
       </select>
