--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
       <select id="userType">
         <option value="" disabled selected>Select</option>
         <option value="B2BB\login and signup.html">B2B</option>
-        <option value="B2C\login and signup.html">B2C</option>
-        <option value="Admin\login and signup.html">Admin</option>
+        <option value="B2C\Login And Registration HTML.html">B2C</option>
+        <option value="Admin\Login And Registration HTML.html">Admin</option>
       </select>
       <button onclick="goToPage()">Go</button>
     </div>
